--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -252,8 +252,8 @@ In below we would use the Zorn's lemma heavily.
     Now, for any $\beta \in \quot{K'}{K(\alpha)}$,
     $m_{\beta, K(\alpha)} \mid m_{\beta, K}$ and thus $m_{\beta, K(\alpha)}$ is separable
     and $\bar\tau_1(m_{\beta, K(\alpha)})$ splits over $L$ since $\bar\tau(m_{\beta, K})$ splits.
-    These imply that $\quot{K'}{K(\alpha)}$ is separable and $\forall \beta \in K(\alpha),
-    m_{\beta, K(\alpha)}$ splits in $L$. Thus, $K(\alpha)$ satisfies the hypothesis,
+    These imply that $\quot{K'}{K(\alpha)}$ is separable and $\forall \beta \in K'$,
+    $m_{\beta, K(\alpha)}$ splits over $L$. Thus, $K(\alpha)$ satisfies the hypothesis,
     and by induction, there are exactly $[K': K(\alpha)]$ monomorphisms $\sigma :: K' \to L$
     such that $\sigma\big|_{K(\alpha)} = \tau_1$, thus there are $[K': K(\alpha)][K(\alpha): k]
     = [K': K]$ such monomorphisms.
