--- a/fields/week5.tex
+++ b/fields/week5.tex
@@ -42,7 +42,7 @@
     \item $\Phi_n$ is irreducible.
       \begin{proof}
         Suppose $\Phi_n = f(x) g(x)$ with $f$ irreducible, and both $f, g$ are monic.
-        By Gauss lemma, we could assume $f(x), g(x) \in \Zb[x]$.
+        By Gauss's lemma, we could assume $f(x), g(x) \in \Zb[x]$.
         Let $\zeta_n$ be a primitive $n$th root of unity which satisfied $f(\zeta_n) = 0$
         and $p$ be a prime with $p \nmid n$.
 
