--- a/fields/week6.tex
+++ b/fields/week6.tex
@@ -30,7 +30,7 @@
     We know that $M(\zeta_n) = L(\zeta_n, \alpha)$ is a splitting field of
     $x^n - a$ over $L$. If we set
     \[ f(x) = \prod_{\sigma \in \Gal(L/K)} (x^n - \sigma(a)), \]
-    then the coefficients of $f(x)$ are elementary symmetric polynomial in
+    then the coefficients of $f(x)$ are elementary symmetric polynomials in
     $\Set{\sigma(a) \given \sigma \in \Gal(L/K) }$, which are fixed by
     $\Gal(L/K)$, so $f(x) \in K[x]$.
 
