--- a/multilinear/week11.tex
+++ b/multilinear/week11.tex
@@ -189,7 +189,7 @@ The right radical of $f:
     Let $w \triangleq a_1 w_1 + \cdots + a_s w_s, v \triangleq b_{p+1} v_{p+1} + \cdots + b_r v_r + 
     c_{r+1} v_{r+1} + \cdots + c_n v_n$. Since $w = v$, $f(w, w) = f(v, v)$. 
     but $f(w, w) = \sum a_i^2 \geq 0$ and $f(v, v) = - \sum b_i^2 \leq 0$. Hence $a_i = 0, b_i = 0$.
-    Since $v_{r+1}, \cdots, v_n$ is linear independent, $c_i = 0$. Therefor these vectors are linear 
+    Since $v_{r+1}, \cdots, v_n$ is linearly independent, $c_i = 0$. Therefor these vectors are linear 
     independent.
 
   \end{proof}
