--- a/multilinear/week13.tex
+++ b/multilinear/week13.tex
@@ -166,7 +166,7 @@ $\tilde{S}^k(V) = \sigma(T^k(V)) \quad \tilde{\Lambda}^k(V) = \sigma'(T^k(V))$
     $q(t') = q(t) \neq 0$. But then $q(t-t') = 0 \implies t-t' \in \ker q = C^k(V) \subseteq
     \ker \sigma$ and because of $\sigma(t) = 0 \implies \sigma(t') = 0$. Hence $t' \in \ker \sigma$.
     But then $t' \in S^k(V) \subseteq \Image \sigma \implies t' \in \Image \sigma \;\cap\;\ker \sigma$,
-    which leads to an contradiction since $\sigma$ is a projection.
+    which leads to an ontradiction since $\sigma$ is a projection.
 \end{itemize}
 
 \begin{exercise}
