--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -288,7 +288,7 @@ And $\trace(T_\alpha) = -a_{n-1}, \det(T_\alpha) = (-1)^n a_0$.
     has a non-zero solution $\bm{c} = (c_1, \dots, c_n) \in L^n$. (i.e., $\sum c_j \sigma_j(\alpha_i) = 0$
     for each $i$.) So $\big( \sum_{j} c_j \sigma_j \big)(\alpha_i) = 0$ for each $\alpha_i$,
     but $\alpha_i$ is a basis, so $\sum_{j} c_j \sigma_j = 0$, then these automorphisms
-    are linear dependent, which leads to a contradiction.
+    are linearly dependent, which leads to a contradiction.
 
     ``$\Rightarrow$'': If not, then exists $\bm{0} \neq \bm{c} = (c_1, \dots, c_n)$
     satisfied $\sum c_i \alpha_i = 0$. Then $\sum_i c_i \sigma_j(\alpha_i) = 0$
