add commutative week1

--- a/main.tex
+++ b/main.tex
@@ -358,6 +358,7 @@
 \include{fields/week6}
 \include{fields/week7}
 \include{fields/week8}
+\include{commutative/week1}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
