Add week2 draft

--- a/commutative/week1.tex
+++ b/commutative/week1.tex
@@ -78,3 +78,11 @@ Let $N(\alpha)  = \alpha \bar\alpha = p_1 \dotsm p_n$ in $\Zb$
     \item $a \equiv b \pmod{p} \implies \left( \frac{a}{p} \right) = \left( \frac{b}{p} \right)$.
   \end{itemize}
 \end{prop}
+
+\subsection{Primary decomposition}
+\begin{definition} \hfill
+  \begin{itemize}
+    \item The radical of an ideal $I$ is defined by $\sqrt{I} = \Set{ a \in R \mid a^n \in I \text{ for some } n \in \Nb}$.
+    \item $I$ is radical if $\sqrt{I} = I$.
+  \end{itemize}
+\end{definition}
