--- a/main.tex
+++ b/main.tex
@@ -359,6 +359,7 @@
 \include{fields/week7}
 \include{fields/week8}
 \include{commutative/week1}
+\include{commutative/week2}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
