--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -171,7 +171,8 @@ In below we would use the Zorn's lemma heavily.
 \begin{definition} \hfill
   \begin{itemize}
     \item $\alpha$ is separable over $K$ if $m_{\alpha, K}$ is separable over $K$.
-    \item $L/K$ is called a separable extension if $\forall \alpha \in L$, $\alpha$ is separable over $K$.
+    \item $L/K$ is called a {\bf separable extension}\index{Field extension!separable extension}
+      if $\forall \alpha \in L$, $\alpha$ is separable over $K$.
   \end{itemize}
 \end{definition}
 
@@ -333,4 +334,11 @@ In below we would use the Zorn's lemma heavily.
     $K(a_0, a_1, \dots, a_{n-1}, \alpha) / K$ is separable, hence each $\alpha$ is separable over $K$,
     thus $L/K$ is separable.
   \end{proof}
+\end{theorem}
+
+\begin{theorem}[Primitive element theorem] \hfill
+  \begin{itemize}
+    \item A finite extension is simple if and only if there are only finitely many intermediate fields.
+    \item If $L/K$ is finite and separable, then $L/K$ is simple.
+  \end{itemize}
 \end{theorem}
