--- a/fields/week4.tex
+++ b/fields/week4.tex
@@ -2,7 +2,7 @@
 \subsection{Normal extension}
 
 \begin{definition}
-  $\quot{L}{K}$ is called a {\bf normal extension}\index{Extension!normal extension}
+  $\quot{L}{K}$ is called a {\bf normal extension}\index{Field extension!normal extension}
   if $\forall \alpha \in L$, $m_{\alpha, K}$ splits over $L$.
 \end{definition}
 
@@ -117,7 +117,7 @@
     non-trivial solution. Choose one solution $(a_1, \dots, a_{n+1})$ having the
     least amount of nonzero element. By reordering, we could assume
     the solution is $(a_1, a_2, \dots, a_m, 0, 0, \dots, 0)$ and it is no harm to assume $\sigma_1 = 1_G$.
-    If $m = 1$, then and $\sigma_1(\alpha_1) a_1 = \alpha_1 a_1 = 0 \implies a_1 = 0$,
+    If $m = 1$, then $\sigma_1(\alpha_1) a_1 = \alpha_1 a_1 = 0 \implies a_1 = 0$,
     which is a contradiction.
 
     So assume that $m > 1$, we have
