--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{xpatch}
 \usepackage{imakeidx}
 \usepackage{bm}
+\usepackage{bbm}
 \usepackage{hvindex}
 %%% fix bugs in hvindex .................
 \def\IndexXXii#1!#2@#3@#4\IndexNIL{%
