--- a/fields/week2.tex
+++ b/fields/week2.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Week 2}
+\subsection{Finite field}
 
 \begin{definition}
   A polynomial $f(x) \in K[x]$ is said to be \emph{separable}\index{seperable}
@@ -138,18 +138,28 @@
 \end{theorem}
 
 \begin{definition}
-  M\"{o}bius $\mu$-function:
-  Let $d = p_1^{k_1} p_2^{k_2} \dotsm p_n^{k_n}$, then
-  \[
-    \mu(d) = \begin{cases}
-      1 & \text{if $n$ is even and all $k_i = 1$} \\
-      -1 & \text{if $n$ is odd and all $k_i = 1$} \\
-      0 & \text{otherwise}
+  The {\bf M\"{o}bius $\mu$-function} \index{M\"{o}bius $\mu$-function}
+  is defined as
+  \[ \mu(n) =
+    \begin{cases}
+      1, & \text{ if } n = 1 \\
+      0, & \text{ if } n \text{ has a square factor } \\
+      (-1)^r, & \text{ if } n \text{ is a product of $r$ distinct primes} \\
     \end{cases}
   \]
 \end{definition}
+
 
 \begin{theorem}[M\"{o}bius inversion formula]
   If $f(n) = \sum\limits_{d \mid n} g(d)$, then
   $g(n) = \sum\limits_{d \mid n} \mu(d) f\left(\frac{n}{d}\right)$.
 \end{theorem}
+
+\begin{remark}
+  Let $\psi_q(d)$ denote the number of monic irreducible polynomials of degree $d$
+  in $\Fb_q$, then $q^n = \sum_{d \mid n} d \psi_q(d)$.
+
+  Using the convolution notation, we have $(n \mapsto q^n) = \mathbbm{1} * (n \mapsto n \psi_q(n))$.
+  Where $\mathbbm{1} \triangleq (n \mapsto 1)$. It could be seen that $\mathbbm{1}^{-1} = \mu$.
+  Thus $n \psi_q(n) = \sum_{d \mid n} \mu(d) q^{n/d}$.
+\end{remark}
