Update hw week10

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -9,6 +9,7 @@
 \usepackage{mathtools,amsthm,amssymb}
 \usepackage{centernot}
 \usepackage{yhmath}
+\usepackage{mathalfa}
 \usepackage{graphicx}
 \usepackage{fontspec}
 \usepackage{titlesec}
@@ -188,6 +189,8 @@
 \newcommand{\Rbx}{\mathbb{R}^\times}
 \newcommand{\Cbx}{\mathbb{C}^\times}
 \newcommand{\Hbx}{\mathbb{H}^\times}
+\newcommand{\Ic}{\mathcal{I}}
+\newcommand{\Vc}{\mathcal{V}}
 \newcommand{\Gc}{\mathcal{G}}
 \newcommand{\Fc}{\mathcal{F}}
 \newcommand{\Cc}{\mathcal{C}}
@@ -233,6 +236,7 @@
 \DeclareMathOperator{\Ext}{Ext}
 %
 \DeclareMathOperator{\Jac}{Jac}
+\DeclareMathOperator{\Spec}{Spec}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
