--- a/hw/week10.tex
+++ b/hw/week10.tex
@@ -26,3 +26,26 @@
       \[ M = IM + N \implies M = N. \]
   \end{enumerate}
 \end{exercise}
+
+\begin{exercise} \mbox{}
+  \begin{enumerate}
+    \item $V_1 \subseteq V_2 \iff \Ic(V_1) \supseteq \Ic(V_2)$.
+    \item $\Ic(V_1 \cup V_2) = \Ic(V_1) \cap \Ic(V_2)$.
+    \item $V_1 \cup V_2 = \Vc(\Ic(V_1) \Ic(V_2))$.
+    \item $\bigcap\limits_{\lambda \in \Lambda} V_\lambda =
+      \Vc\left(\sum\limits_{\lambda \in \Lambda} \Ic(V_\lambda)\right)$.
+    \item $V$ is irr. $\iff \Ic(V) \in \Spec k[x_1, \dots, x_n]$.
+  \end{enumerate}
+\end{exercise}
+
+\begin{exercise} \mbox{}
+  \begin{enumerate}
+    \item $f(\alpha) \in W \quad \alpha \in V$.
+    \item $\varphi = f^*$.
+    \item For different representations of $R$,
+      $R \cong \quot{k[x_1, \dots, x_n]}{I_1} \underset{\Psi^{-1}}{\overset{\Psi}{\cong}}
+      \quot{k[z_1, \dots, z_l]}{I_2}$
+      and $\begin{cases}V_1 = \Vc(I_1) \\ V_2 = \Vc(I_2) \end{cases}$.
+      Show that $\Psi$ (and $\Psi^{-1}$) will give an isom. of $V_1$ and $V_2$.
+  \end{enumerate}
+\end{exercise}
